// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls methods on modal 1`] = `
<div
  className="list-card"
>
  <div
    className="item-container"
  >
    <div
      className="item-text"
    >
      <div>
        <h4
          className="item-name"
        >
          Cake
        </h4>
      </div>
      <div>
        <h6>
          SHS 
          200
        </h6>
      </div>
    </div>
    <div
      className="item-icon-holder"
    >
      <a
        href=""
        onClick={[Function]}
        title="Edit Item"
      >
        <i
          className="item-icons fa-pencil"
        />
      </a>
      <a
        href=""
        onClick={[Function]}
        title="Delete Item"
      >
        <i
          className="item-icons fa-trash"
        />
      </a>
    </div>
  </div>
  <CheckBox
    id={1}
    name="Cake"
    price={200}
    shopping_list_id={1}
    status={false}
  />
  <Modal
    clearMessages={[Function]}
    create={false}
    owner=""
    price={200}
    shopping_list_id={1}
    shopping_list_item_id={1}
    shopping_list_item_status={false}
    showModal={[Function]}
    title=""
  />
</div>
`;

exports[`clears messages 1`] = `
<div
  className="list-card"
>
  <div
    className="item-container"
  >
    <div
      className="item-text"
    >
      <div>
        <h4
          className="item-name"
        />
      </div>
      <div>
        <h6>
          SHS 
        </h6>
      </div>
    </div>
    <div
      className="item-icon-holder"
    >
      <a
        href=""
        onClick={[Function]}
        title="Edit Item"
      >
        <i
          className="item-icons fa-pencil"
        />
      </a>
      <a
        href=""
        onClick={[Function]}
        title="Delete Item"
      >
        <i
          className="item-icons fa-trash"
        />
      </a>
    </div>
  </div>
  <CheckBox />
</div>
`;

exports[`clicks anchors and shows modal 1`] = `
<div
  className="list-card"
>
  <div
    className="item-container"
  >
    <div
      className="item-text"
    >
      <div>
        <h4
          className="item-name"
        >
          Cake
        </h4>
      </div>
      <div>
        <h6>
          SHS 
        </h6>
      </div>
    </div>
    <div
      className="item-icon-holder"
    >
      <a
        href=""
        onClick={[Function]}
        title="Edit Item"
      >
        <i
          className="item-icons fa-pencil"
        />
      </a>
      <a
        href=""
        onClick={[Function]}
        title="Delete Item"
      >
        <i
          className="item-icons fa-trash"
        />
      </a>
    </div>
  </div>
  <CheckBox
    id={1}
    name="Cake"
    price=""
    shopping_list_id={1}
    status={false}
  />
  <Modal
    clearMessages={[Function]}
    create={false}
    first_input=""
    owner="delete_shopping_list_item"
    price=""
    shopping_list_id={1}
    shopping_list_item_id={1}
    shopping_list_item_status={false}
    showModal={[Function]}
    title="Are you sure you want to delete 'Cake' from 'Food'?"
  />
</div>
`;

exports[`highlights searched items 1`] = `
<div
  className="list-card highlighted-item"
>
  <div
    className="item-container"
  >
    <div
      className="item-text"
    >
      <div>
        <h4
          className="item-name"
        >
          Cake
        </h4>
      </div>
      <div>
        <h6>
          SHS 
          200
        </h6>
      </div>
    </div>
    <div
      className="item-icon-holder"
    >
      <a
        href=""
        onClick={[Function]}
        title="Edit Item"
      >
        <i
          className="item-icons fa-pencil"
        />
      </a>
      <a
        href=""
        onClick={[Function]}
        title="Delete Item"
      >
        <i
          className="item-icons fa-trash"
        />
      </a>
    </div>
  </div>
  <CheckBox
    id={1}
    name="Cake"
    price={200}
    shopping_list_id={1}
    status={false}
  />
</div>
`;

exports[`renders the shopping_list_item component 1`] = `
<div
  className="list-card"
>
  <div
    className="item-container"
  >
    <div
      className="item-text"
    >
      <div>
        <h4
          className="item-name"
        />
      </div>
      <div>
        <h6>
          SHS 
        </h6>
      </div>
    </div>
    <div
      className="item-icon-holder"
    >
      <a
        href=""
        onClick={[Function]}
        title="Edit Item"
      >
        <i
          className="item-icons fa-pencil"
        />
      </a>
      <a
        href=""
        onClick={[Function]}
        title="Delete Item"
      >
        <i
          className="item-icons fa-trash"
        />
      </a>
    </div>
  </div>
  <CheckBox />
</div>
`;

exports[`unmounts component 1`] = `
<div
  className="list-card"
>
  <div
    className="item-container"
  >
    <div
      className="item-text"
    >
      <div>
        <h4
          className="item-name"
        />
      </div>
      <div>
        <h6>
          SHS 
        </h6>
      </div>
    </div>
    <div
      className="item-icon-holder"
    >
      <a
        href=""
        onClick={[Function]}
        title="Edit Item"
      >
        <i
          className="item-icons fa-pencil"
        />
      </a>
      <a
        href=""
        onClick={[Function]}
        title="Delete Item"
      >
        <i
          className="item-icons fa-trash"
        />
      </a>
    </div>
  </div>
  <CheckBox />
</div>
`;
